# onx

./: .gitignore  .gitmodules  BUILD_LINE  CMakeLists.txt  ESP-BUILD.txt  README.md  esp-idf-no-free-rtos  gdb-commands.txt
board/: README.md  adafruit_feather_rp2040.h  adafruit_feather_rp2040_rfm69.h  adafruit_feather_rp2040_rfm69_settings.cmake  adafruit_feather_rp2040_rfm69_targets.cmake  adafruit_feather_rp2040_settings.cmake  adafruit_feather_rp2040_targets.cmake  adafruit_feather_rp2350.h  adafruit_feather_rp2350_settings.cmake  adafruit_feather_rp2350_targets.cmake  adafruit_fruit_jam.h  adafruit_fruit_jam_settings.cmake  adafruit_fruit_jam_targets.cmake
cmake/: A.cmake  M.cmake
include/: onn.h  onr.h  ont.h  tests.h
include/onx/: boot.h  chunkbuf.h  config.h  database.h  dma-mem.h  dsi.h  gpio.h  hstx.h  i2c.h  io.h  ipv6.h  items.h  led-matrix.h  led-strip.h  lib.h  log.h  psram.h  qspi-flash.h  radio.h  seesaw.h  show_bytes_n_chars.h  spi-flash.h  spi.h  startup.h  sync.h  time.h
sdk-diffs/src/rp2_common/pico_stdio_usb/: stdio_usb.c  stdio_usb_descriptors.c
src/: CMakeLists.txt
src/lib/: chunkbuf.c  colours.c  config.c  database.c  lib.c  list.c  properties.c  show_bytes_n_chars.c  tests.c  value.c
src/onl/: CMakeLists.txt  README.md  io.c  ipv6-stub.c  led-matrix-dotstar.c  log.c  mem.c  persistence.c  psram-stub.c  radio-rfm69.c  radio-rfm69.h  radio-stub.c  seesaw.c  tinyusb-device.c  tinyusb-host.c  touch-i2c.c  touch-usb.c  tusb_config.h
src/onl/A/: say-hi-main.c  say-hi.c
src/onl/M/: CMakeLists.txt
src/onl/M/include/: general-defs.h
src/onl/M/rp2350-adafruit-feather/: CMakeLists.txt
src/onl/M/rp2350-adafruit-feather/u-mobile-5-wvga/: CMakeLists.txt  dma-mem.c  onx.c  sfe_psram.c  sfe_psram.h
src/onl/drivers/: README.md  radio-stub.c  seesaw.c
src/onl/esp32/: boot.c  dsi-jd9365.c  gpio.c  log.c  random.c  startup.c  sync-and-mem.h  time.c  touch-i2c.c
src/onl/pico/: boot.c  dma-mem.c  gpio.c  hstx.c  i2c.c  led-strip-neopixel.c  log.c  m-class-support.h  mem.c  persistence.c  pico-support.h  psram.c  qspi-flash.c  random.c  spi-flash.c  spi.c  startup.c  sync-and-mem.h  time.c  usb-host.c  usb-host.h
src/onn/: onn.c  persistence.h
src/onp/: logic-evaluators.c  onp.c  onp.h
src/onr/: edit-rules.c
src/ont/: behaviours.c  g2d-buffer.c  g2d-lcd.c  g2d.c  g2d.h  io-evaluators.c  io-evaluators.h  logic-evaluators.c  onx-u.c  user-2d.c  user-2d.h
src/ont/M/: hx.c
src/ont/adafruit_feather_rp2040/i-remote/: CMakeLists.txt  io-evaluators.h  onx.c
src/ont/adafruit_feather_rp2040/o-moon/: CMakeLists.txt
src/ont/adafruit_feather_rp2040/t-tests/: CMakeLists.txt  onx.c
src/ont/adafruit_feather_rp2040_rfm69/i-remote/: CMakeLists.txt  onx.c
src/ont/adafruit_feather_rp2040_rfm69/o-moon/: CMakeLists.txt  onx.c
src/ont/adafruit_feather_rp2040_rfm69/t-tests/: onx.c
src/ont/adafruit_feather_rp2350/t-tests/: CMakeLists.txt  onx.c
src/ont/adafruit_feather_rp2350/u-mobile/: CMakeLists.txt  onx.c
src/ont/adafruit_fruit_jam/t-tests/: CMakeLists.txt  onx.c
src/ont/adafruit_fruit_jam/u-mobile/: CMakeLists.txt  onx.c
src/ont/esp32/: onx-u.c
src/ont/images/: mountains_800x480_jpeg.h  mountains_800x480_rgb332.h  mountains_800x480_rgb565-cut.h  mountains_800x480_rgb565.h
src/ont/pico/: onx-u.c
src/ont/rp2040/adafruit-feather/i-remote/: CMakeLists.txt  io-evaluators.c  onx.c
src/ont/rp2040/adafruit-feather/o-moon/: onx.c
src/ont/rp2350/adafruit-feather/u-mobile/: CMakeLists.txt  onx.c
src/ont/waveshare_esp32_p4_module_dev_kit/t-tests/: CMakeLists.txt  sdkconfig  sdkconfig.defaults.esp32p4
src/ont/waveshare_esp32_p4_module_dev_kit/t-tests/main/: CMakeLists.txt  onx.c
src/ont/waveshare_esp32_p4_module_dev_kit/u-console/: CMakeLists.txt  esp-idf-no-free-rtos  sdkconfig  sdkconfig.defaults  waveshare__esp_lcd_jd9365_10_1-no-free-rtos
src/ont/waveshare_esp32_p4_module_dev_kit/u-console/main/: CMakeLists.txt  idf_component.yml  onx.c
src/tests/: test-chunkbuf.c  test-colours.c  test-database.c  test-list.c  test-onn.c  test-properties.c  test-rules.c  test-value.c
tests/: CMakeLists.txt  test-hi.c  test-list.c  test-onn.c  test-properties.c  test-value.c
tests/A/pc-generic-laptop/: main.c
tests/rp2040/adafruit-feather/: t-tests.c
tests/rp2350/adafruit-feather/: CMakeLists.txt  t-tests.c
